--- a/index.html
+++ b/index.html
@@ -20,16 +20,29 @@
     </header>
     <section id="about">
         <h2>Sobre Mí</h2>
-        <p>Breve descripción sobre ti.</p>
-    </section>
+        <p>
+            Soy un <strong>Ingeniero Civil</strong> con 3 años de experiencia en <strong>modelado BIM</strong> en todas las disciplinas. 
+            Además, soy <strong>desarrollador BIM</strong> especializado en <em>Revit API Development</em>. 
+            También soy <strong>programador web</strong> con conocimientos en diversas tecnologías.
+        </p>
+    </section>    
     <section id="skills">
         <h2>Habilidades</h2>
         <ul>
-            <li>Habilidad 1</li>
-            <li>Habilidad 2</li>
-            <li>Habilidad 3</li>
+            <li>Modelado BIM en todas las disciplinas</li>
+            <li>Desarrollo con Revit API (BIM Programming)</li>
+            <li>Desarrollo Web (Frontend & Backend)</li>
+            <li>Lenguajes de Programación:
+                <ul>
+                    <li>Python</li>
+                    <li>C#</li>
+                    <li>JavaScript</li>
+                    <li>HTML & CSS</li>
+                </ul>
+            </li>
         </ul>
     </section>
+    
     <section id="projects">
         <h2>Proyectos</h2>
         <div class="project">
