--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@
     <footer>
         <p>&copy; 2025 Tu Nombre. Todos los derechos reservados.</p>
     </footer>
+    <a href="https://api.whatsapp.com/send?phone=+573027508209&text=¡Hola! Me gustaría obtener más información." 
+    class="whatsapp-button" 
+    target="_blank">
+    <i class="fa fa-whatsapp"></i>
+    </a>
+
 </body>
 </html>
