--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     <a href="https://api.whatsapp.com/send?phone=+573027508209&text=¡Hola! Me gustaría obtener más información." 
     class="whatsapp-button" 
     target="_blank">
-    <i class="fa fa-whatsapp"></i>
+    <img src="img/wp.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
+
 
 </body>
 </html>
