--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <section id="contact">
         <h2>Contacto</h2>
-        <p>Correo electrónico: <a href="mailto:tuemail@example.com">tuemail@example.com</a></p>
+        <p>Correo electrónico: <a href="mailto:giancarloarciniegas@gmail.com">giancarloarciniegas@gmail.com</a></p>
     </section>
     <footer>
         <p>&copy; 2025 Tu Nombre. Todos los derechos reservados.</p>
@@ -73,7 +73,5 @@
     target="_blank">
     <img src="img/wp.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
-
-
 </body>
 </html>
