--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <!-- Swiper para Modelación BIM -->
             <div class="project">
                 <h3>Modelación BIM</h3>
-                <p>Modelacion en las diferentes especialidades, estructura,arquitectura,MEP, etc</p>
+                <p>Modelacion en las diferentes especialidades, estructura,arquitectura,MEP, Modelado en Sitio, etc</p>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <!-- Imágenes -->
@@ -114,6 +114,9 @@
                         </div>
                         <div class="swiper-slide">
                             <img src="img/img11.jpg" alt="Modelación BIM 11" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/img12.jpg" alt="Modelación BIM 11" class="zoom-image">
                         </div>
                     </div>
                     <!-- Botones de navegación -->
