--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Barra de Navegación -->
     <header>
-        <div class="logo">GA</div>
+        <div class="logo">WARBIMPRO</div>
         <nav>
             <ul>
                 <li><a href="#about">Sobre Mí</a></li>
@@ -123,8 +123,36 @@
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-pagination"></div>
-                </div>
+                </div>                
             </div>
+                    <!-- PANTALLA COMPLETA -->
+            <div id="fullscreen-container">
+                <div class="fullscreen-swiper swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="img/img1.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img2.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img3.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img4.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img5.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img6.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img7.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img8.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img8.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img9.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img10.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img11.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img12.jpg"></div>
+                    </div>
+
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <span class="close-fullscreen">&times;</span>
+            </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
         </div>
     </section>
     
