--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                     <div class="swiper-wrapper">
                         <!-- Imágenes -->
                         <div class="swiper-slide">
+                            <img src="img/img12.jpg" alt="Modelación BIM 12" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
                             <img src="img/img1.jpg" alt="Modelación BIM 1" class="zoom-image">
                         </div>
                         <div class="swiper-slide">
@@ -116,7 +119,25 @@
                             <img src="img/img11.jpg" alt="Modelación BIM 11" class="zoom-image">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img/img12.jpg" alt="Modelación BIM 11" class="zoom-image">
+                            <img src="img/img13.jpg" alt="Modelación BIM 11" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/img14.jpg" alt="Modelación BIM 11" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/img15.jpg" alt="Modelación BIM 11" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/img16.jpg" alt="Modelación BIM 11" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/img17.jpg" alt="Modelación BIM 11" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/img18.jpg" alt="Modelación BIM 11" class="zoom-image">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/img19.jpg" alt="Modelación BIM 11" class="zoom-image">
                         </div>
                     </div>
                     <!-- Botones de navegación -->
@@ -129,6 +150,7 @@
             <div id="fullscreen-container">
                 <div class="fullscreen-swiper swiper">
                     <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="img/img12.jpg"></div>
                         <div class="swiper-slide"><img src="img/img1.jpg"></div>
                         <div class="swiper-slide"><img src="img/img2.jpg"></div>
                         <div class="swiper-slide"><img src="img/img3.jpg"></div>
@@ -141,7 +163,15 @@
                         <div class="swiper-slide"><img src="img/img9.jpg"></div>
                         <div class="swiper-slide"><img src="img/img10.jpg"></div>
                         <div class="swiper-slide"><img src="img/img11.jpg"></div>
-                        <div class="swiper-slide"><img src="img/img12.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img13.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img14.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img15.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img16.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img17.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img18.jpg"></div>
+                        <div class="swiper-slide"><img src="img/img19.jpg"></div>
+                     
+                        
                     </div>
 
                     <div class="swiper-button-next"></div>
