--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Barra de Navegación -->
     <header>
-        <div class="logo">WARBIMPRO</div>
+        <div class="logo">GA</div>
         <nav>
             <ul>
                 <li><a href="#about">Sobre Mí</a></li>
