update Automatizacion BIM

--- a/index.html
+++ b/index.html
@@ -75,7 +75,20 @@
         <div class="projects-container">
             <div class="project">
                 <h3>Automatización BIM</h3>
-                <p>Desarrollo de herramientas en C# para Revit.</p>
+                <p>
+                    <a href="https://github.com/Gaag13/SOLCANTIDADES" target="_blank">Addin Cantidades </a>
+                </p>
+                <div class="swiper automationSwiper">
+                    <div class="swiper-wrapper">
+                        <!-- Imágenes -->
+                        <div class="swiper-slide"><img src="img/wall01.png" alt="Modelación BIM 12" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/wall02.png" alt="Modelación BIM 1" class="zoom-image"></div>                        
+                    </div>                            
+                    <!-- Botones de navegación -->
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination"></div>
+                </div>    
             </div>
             <div class="project">
                 <h3>Gestión BIM en la Nube</h3>
