--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- Sección de Contacto -->
     <section id="contact">
         <h2>Contacto</h2>
-        <p>Email: <a href="mailto:giancarloarciniegas@gmail.com">giancarloarciniegas@gmail.com</a></p>
+        <p>Email: <a href="mailto:giancarloarciniegas@gmail.com">warbimpro@gmail.com</a></p>
     </section>
 
     <!-- Footer -->
