--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Barra de Navegación -->
     <header>
-        <div class="logo">GA</div>
+        <div class="logo"><img src="img/LOGOFINAL.png" alt=""></div>
         <nav>
             <ul>
                 <li><a href="#about">Sobre Mí</a></li>
