--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section id="about">
         <h2>Transformo Procesos AEC con Soluciones Tecnológicas Integrales</h2>
         <p>
-            Soy <strong>Giancarlo Andrey Arciniegas Gutiérrez</strong>, Ingeniero Civil especializado en <strong>automatización BIM y desarrollo de software estratégico</strong>. 
+            Soy <strong>Giancarlo Arciniegas Gutiérrez</strong>, Ingeniero Civil especializado en <strong>automatización BIM y desarrollo de software estratégico</strong>. 
             Combino mi expertise técnico con <strong>liderazgo orientado a resultados</strong> para implementar sistemas que aumentan la productividad en proyectos de construcción.
         </p>
     
