--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="es">  
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portafolio de Giancarlo Arciniegas, Ingeniero Civil especializado en BIM y desarrollo web." />
+    <meta property="og:title" content="Portafolio de Giancarlo Arciniegas" />
+    <meta property="og:description" content="Ingeniero Civil y BIM Developer con experiencia en automatización y desarrollo web." />
+    <meta property="og:image" content="ruta/a/tu/imagen.jpg" />
+    <meta property="og:url" content="https://gaag13.github.io/PortFolio/" />
     <title>Giancarlo Arciniegas| Portafolio</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
@@ -23,7 +28,7 @@
 
     <!-- Barra de Navegación -->
     <header>
-        <div class="logo"><img src="img/LOGOFINAL.png" alt=""></div>
+        <div class="logo"><img src="img/LOGOFINAL.png" alt="logo Empresarial"></div>
         <nav>
             <ul>
                 <li><a href="#about">Sobre Mí</a></li>
@@ -90,8 +95,8 @@
                 <div class="swiper automationSwiper">
                     <div class="swiper-wrapper">
                         <!-- Imágenes -->
-                        <div class="swiper-slide"><img src="img/wall01.png" alt="Modelación BIM 12" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/wall02.png" alt="Modelación BIM 1" class="zoom-image"></div>                        
+                        <div class="swiper-slide"><img src="img/wall01.png" alt="Imagen del Addin 1" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/wall02.png" alt="Imagen del Addin 2" class="zoom-image"></div>                        
                     </div>                            
                     <!-- Botones de navegación -->
                     <div class="swiper-button-next"></div>
@@ -111,21 +116,21 @@
                 <div class="swiper analysisSwiper">
                     <div class="swiper-wrapper">
                         <!-- Imágenes -->
-                        <div class="swiper-slide"><img src="img/PA1.jpg" alt="Modelación BIM 12" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA2.jpg" alt="Modelación BIM 1" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA3.jpg" alt="Modelación BIM 2" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA4.jpg" alt="Modelación BIM 3" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA5.jpg" alt="Modelación BIM 4" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA6.jpg" alt="Modelación BIM 5" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA7.jpg" alt="Modelación BIM 6" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA8.jpg" alt="Modelación BIM 7" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA9.jpg" alt="Modelación BIM 8" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA10.jpg" alt="Modelación BIM 9" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA11.jpg" alt="Modelación BIM 10" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA12.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA13.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA14.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/PA15.jpg" alt="Modelación BIM 11" class="zoom-image"> </div>
+                        <div class="swiper-slide"><img src="img/PA1.jpg" alt="Analisis matricial 1" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA2.jpg" alt="Analisis matricial 2" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA3.jpg" alt="Analisis matricial 3" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA4.jpg" alt="Analisis matricial 4" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA5.jpg" alt="Analisis matricial 5" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA6.jpg" alt="Analisis matricial 6" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA7.jpg" alt="Analisis matricial 7" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA8.jpg" alt="Analisis matricial 8" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA9.jpg" alt="Analisis matricial 9" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA10.jpg" alt="Analisis matricial 10" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA11.jpg" alt="Analisis matricial 11" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA12.jpg" alt="Analisis matricial 12" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA13.jpg" alt="Analisis matricial 13" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA14.jpg" alt="Analisis matricial 14" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/PA15.jpg" alt="Analisis matricial 15" class="zoom-image"> </div>
                     </div>                            
                     <!-- Botones de navegación -->
                     <div class="swiper-button-next"></div>
@@ -140,25 +145,25 @@
                 <div class="swiper bimSwiper">
                     <div class="swiper-wrapper">
                         <!-- Imágenes -->
-                        <div class="swiper-slide"><img src="img/img12.jpg" alt="Modelación BIM 12" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img1.jpg" alt="Modelación BIM 1" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img2.jpg" alt="Modelación BIM 2" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img3.jpg" alt="Modelación BIM 3" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img4.jpg" alt="Modelación BIM 4" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img5.jpg" alt="Modelación BIM 5" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img6.jpg" alt="Modelación BIM 6" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img7.jpg" alt="Modelación BIM 7" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img8.jpg" alt="Modelación BIM 8" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img9.jpg" alt="Modelación BIM 9" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img10.jpg" alt="Modelación BIM 10" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img11.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img13.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img14.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img15.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img16.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img17.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img18.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
-                        <div class="swiper-slide"><img src="img/img19.jpg" alt="Modelación BIM 11" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img12.jpg" alt="Modelacion en Sitio" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img1.jpg" alt="Portada Proyecto Yado" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img2.jpg" alt="Planos Ambientados" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img3.jpg" alt="Planos Arquitectonicos" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img4.jpg" alt="Planos Estructurales" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img5.jpg" alt="Planos de refuerzos zapatas" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img6.jpg" alt="Planos de refuerzos vigas" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img7.jpg" alt="Planos de refuerzos vigas 2" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img8.jpg" alt="Plano de columnas class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img9.jpg" alt="Plano de redes hidrosanitarias 1" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img10.jpg" alt="Plano de redes hidrosanitarias 2" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img11.jpg" alt="Esquema electrico" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img13.jpg" alt="Render 3D proyecto yado" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img14.jpg" alt="Render 3D proyecto yado 2" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img15.jpg" alt="Render Sala proyecto yado" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img16.jpg" alt="Render Sala proyecto yado 2" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img17.jpg" alt="Render Cocina proyecto yado 1" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img18.jpg" alt="Render Cocina proyecto yado 2" class="zoom-image"></div>
+                        <div class="swiper-slide"><img src="img/img19.jpg" alt="Render habitacion principal proyecto yado 1 class="zoom-image"></div>
                     </div>
                     <!-- Botones de navegación -->
                     <div class="swiper-button-next"></div>
@@ -187,7 +192,7 @@
     <!-- Sección de Contacto -->
     <section id="contact">
         <h2>Contacto</h2>
-        <p>Email: <a href="mailto:giancarloarciniegas@gmail.com">warbimpro@gmail.com</a></p>
+        <p>Email: <a href="mailto:warbimpro@gmail.com">warbimpro@gmail.com</a></p>
     </section>
 
     <!-- Footer -->
