--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="project">
                 <h3>Automatización BIM</h3>
                 <p>
-                    <a href="https://github.com/Gaag13/SOLCANTIDADES" target="_blank">Addin Cantidades </a>
+                    <a href="https://www.youtube.com/watch?v=DCTLA_O4dd8&ab_channel=WARBIMPRO" target="_blank">Addin Cantidades </a>
                 </p>
                 <div class="swiper automationSwiper">
                     <div class="swiper-wrapper">
